[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elkpy_MaxELK"
version = "1.0.0"
authors = [
  { name="Maxime Gendebien", email="max@elk.audio" },
  { name="Ruben Svensson", email="ruben@elk.audio" },
]
description = "A basic controller for sushi using gRPC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/elkaudio/elkpy"
"Bug Tracker" = "https://github.com/elkaudio/elkpy/issues"
