[build-system]
requires = ["setuptools>=59.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elkpy"
version = "1.2.3"
authors = [
  { name="Maxime Gendebien", email="max@elk.audio" },
  { name="Ruben Svensson", email="ruben@elk.audio" },
]
description = "A basic controller for sushi using gRPC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = ['protobuf', 'grpcio', 'grpcio-tools']
[project.urls]
"Homepage" = "https://github.com/elkaudio/elkpy"
"Bug Tracker" = "https://github.com/elkaudio/elkpy/issues"
