[metadata]
name = elkpy
version = 1.1.6
author = Ruben Svensson
description = A basic controller for Sushi using gRPC
long_description = This is a longer description for the project
url = https://github.com/elkaudio/elkpy
[options]
python_requires = >=3.7, <4
install_requires = 
    protobuf
    grpcio>=1.48.2
    grpcio-tools>=1.48.2
